# envops

./: .gitignore  CLAUDE.md  LICENSE  README.md  envops  envops.py  pyproject.toml
docs/: 2026-07-15-postmortem-remote-set-stdin.md
scripts/: check_db_url.py  diagnose_false_positives.py
skills/envops/: SKILL.md
tests/: test_envops.py
