[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envops"
version = "0.1.3"
description = "Inspect and manipulate .env files; secret-looking values are masked by default"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Reorx", email = "novoreorx@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["dotenv", "env", "secrets", "cli", "mask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/reorx/envops"

[project.scripts]
envops = "envops:main"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
